--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
 			"extends": [
 				"plugin:@angular-eslint/recommended",
 				"plugin:@angular-eslint/template/process-inline-templates",
-				"plugin:prettier/recommended"
+				"prettier"
 			],
 			"rules": {
 				"@angular-eslint/directive-selector": [
@@ -33,7 +33,9 @@
 				"@angular-eslint/no-empty-lifecycle-method": "off",
 				"@angular-eslint/no-input-rename": "off",
 				"@angular-eslint/no-output-rename": "off",
-				"@angular-eslint/no-conflicting-lifecycle": "off"
+				"@angular-eslint/no-conflicting-lifecycle": "off",
+				"@typescript-eslint/no-unused-vars-experimental": "off",
+				"@typescript-eslint/no-unused-vars": "warn"
 			}
 		},
 		{
@@ -44,8 +46,9 @@
 		{
 			"files": ["*.html"],
 			"excludedFiles": ["*inline-template-*.component.html"],
-			"extends": ["plugin:prettier/recommended"],
-			"rules": { "prettier/prettier": ["error", { "parser": "angular" }] }
+			"extends": ["prettier"],
+			"plugins": ["prettier"],
+			"rules": { "prettier/prettier": ["warn", { "parser": "angular" }] }
 		}
 	]
 }
