--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,8 @@
 				"@angular-eslint/no-output-rename": "off",
 				"@angular-eslint/no-conflicting-lifecycle": "off",
 				"@typescript-eslint/no-unused-vars-experimental": "off",
-				"@typescript-eslint/no-unused-vars": "warn"
+				"@typescript-eslint/no-unused-vars": "warn",
+				"no-console": "warn"
 			}
 		},
 		{
